<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentGENERAL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".BookEditPersonal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/book_COVER"
                android:layout_width="90dp"
                android:layout_height="130dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_menu_gallery" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:labelFor="@+id/book_TITLE"
                        android:text="@string/str_title" />

                    <EditText
                        android:id="@+id/book_TITLE"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:inputType="text"
                        tools:ignore="LabelFor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:labelFor="@+id/book_ISBN"
                        android:text="@string/str_isbn" />

                    <EditText
                        android:id="@+id/book_ISBN"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:inputType="numberDecimal" />

                    <ImageButton
                        android:id="@+id/btnScanISBN"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ic_menu_camera"
                        android:contentDescription="@null" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:text="@string/str_kind" />

                    <Spinner
                        android:id="@+id/book_KIND"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:entries="@array/bookKind" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:labelFor="@+id/book_AUTHOR"
                android:text="@string/str_author" />

            <AutoCompleteTextView
                android:id="@+id/book_AUTHOR"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:dropDownWidth="match_parent"
                android:inputType="text"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_TRANSLATOR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:labelFor="@+id/book_TRANSLATOR"
                android:text="@string/str_translator" />

            <EditText
                android:id="@+id/book_TRANSLATOR"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:labelFor="@+id/book_PUBLISHER"
                android:text="@string/str_publisher" />

            <AutoCompleteTextView
                android:id="@+id/book_PUBLISHER"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:dropDownWidth="match_parent"
                android:inputType="text"
                android:maxLines="1" />

            <!--<EditText-->
            <!--android:id="@+id/book_PUBLISHER"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="0.7"-->
            <!--android:inputType="text" />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:labelFor="@+id/book_PAGES"
                android:text="@string/str_pages" />

            <EditText
                android:id="@+id/book_PAGES"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:labelFor="@+id/book_PUBLISHED_DATE"
                android:text="@string/str_date_published" />

            <EditText
                android:id="@+id/book_PUBLISHED_DATE"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:inputType="date" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>