<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Statistics$PlaceholderFragment">

    <Spinner
        android:id="@+id/spView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/statisticsType"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart_01"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutLegend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/pieChart_01">

        <ImageView
            android:id="@+id/imgLegend_01"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="@color/colorRed" />

        <TextView
            android:id="@+id/tvLegend_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/str_books_local"
            android:textSize="11sp" />

        <ImageView
            android:id="@+id/imgLegend_02"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="16dp"
            android:background="@color/colorBlue" />

        <TextView
            android:id="@+id/tvLegend_02"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:text="@string/str_books_foreign"
            android:textSize="11sp" />

        <ImageView
            android:id="@+id/imgLegend_03"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="16dp"
            android:background="@color/colorGreen" />

        <TextView
            android:id="@+id/tvLegend_03"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:text="@string/str_books_manga"
            android:textSize="11sp" />
    </LinearLayout>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart_02"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutLegend" />

</androidx.constraintlayout.widget.ConstraintLayout>