<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:weightSum="1"
    tools:context="com.thangtd.jackystore.BookDetails">

    <LinearLayout
        android:id="@+id/layout_TITLE"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detail_TITLE"
            style="@style/text22Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tựa đề" />

        <TextView
            android:id="@+id/detail_ISBN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ISBN" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorSilver" />

    <LinearLayout
        android:id="@+id/layout_GENERAL"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0.45"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/detail_COVER"
            android:layout_width="130dp"
            android:layout_height="180dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_menu_gallery" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_author_grey600_48dp" />

                <TextView
                    android:id="@+id/detail_AUTHOR"
                    style="@style/textDefaultBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="8dp"
                    android:gravity="bottom" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_certificate_grey600_48dp" />

                <TextView
                    android:id="@+id/detail_PUBLISHER"
                    style="@style/textDefaultBlack"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginStart="8dp"
                    android:gravity="bottom" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/detailLayout_TRANSLATOR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_translator_grey600_48dp" />

                <TextView
                    android:id="@+id/detail_TRANSLATOR"
                    style="@style/textDefaultBlack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="8dp"
                    android:gravity="bottom" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@null"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_calendar_check_grey600_48dp" />

                <TextView
                    android:id="@+id/detail_RELEASED_DATE"
                    style="@style/textDefaultBlack"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginStart="8dp"
                    android:gravity="bottom" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_book_open_page_variant_grey600_48dp" />

                <TextView
                    android:id="@+id/detail_PAGES"
                    style="@style/textDefaultBlack"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginStart="8dp"
                    android:gravity="bottom" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            style="@style/text16PrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/str_personal_detail" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:background="@color/colorSilver" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="0.35"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textDefaultItalic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:gravity="bottom"
                android:text="@string/str_date_purchased" />

            <TextView
                android:id="@+id/detail_PURCHASED_DATE"
                style="@style/textDefaultBlack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight="0.65"
                android:gravity="bottom" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                style="@style/textDefaultItalic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:gravity="bottom"
                android:text="@string/str_date_finished" />

            <TextView
                android:id="@+id/detail_FINISHED_DATE"
                style="@style/textDefaultBlack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight="0.65"
                android:gravity="bottom" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                style="@style/textDefaultItalic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:gravity="bottom"
                android:text="@string/str_location" />

            <TextView
                android:id="@+id/detail_LOCATION"
                style="@style/textDefaultBlack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight="0.65"
                android:gravity="bottom" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                style="@style/textDefaultItalic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:gravity="bottom"
                android:text="@string/str_note" />

            <TextView
                android:id="@+id/detail_NOTE"
                style="@style/textDefaultBlack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight="0.65"
                android:gravity="bottom" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
